# rattler_config_prototype

./: Cargo.toml  testconfig.toml
src/: config.rs  extensible_config.rs  main.rs
src/config/: build.rs  concurreny.rs  proxy.rs  repodata_config.rs
