[package]
name = "rattler_config"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = "7.6.0"
rattler_conda_types = "0.35.0"
rattler_package_streaming = "0.22.39"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.8.23" }
url = { version = "2.5.4", features = ["serde"] }
