[package]
name = "rattler_config"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.15.11"
fs-err = "3.1.1"
miette = "7.6.0"
rattler_conda_types = "0.35.0"
rattler_package_streaming = "0.22.39"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = { version = "0.8.23" }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
